# StaticMap

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  testreport.yml
src/: static_map.hpp  static_string_map.hpp
test/: CMakeLists.txt  test_constexpr.cpp  test_dummy.cpp  test_dynamic.cpp
